# Sayonara

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
.github/workflows/: cmake-multi-platform.yml
src/: gui.cpp  gui.h  main.cpp  utils.cpp  utils.h
src/api/: CMakeLists.txt  naraapi.h  naraapi_hl.cpp  naraapi_ll.cpp
src/gui/: gui.h  light_config.cpp  main_window.cpp  misc.cpp
